<resources>
    <string name="app_name">TripPlanner</string>
    <string name="singout">Sign Out</string>
    <string name="title">Trip Planner</string>
    <string name="newTrip">Create New</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Tname">Trip Name</string>
    <string name="date">Trip Date</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="nam">Name:</string>
    <string name="cit">City:</string>
    <string name="da">Date:</string>
    <string name="places">Places:</string>
    <string name="vMap">View on Map</string>
    <string name="splaces">Selected Places:</string>
    <string name="addPlaces">Add Places</string>
    <string name="title_activity_maps">Map</string>
</resources>
